top section complete

--- a/bookmark-landing-page-master/index.html
+++ b/bookmark-landing-page-master/index.html
@@ -50,7 +50,26 @@
             </div>
         </nav>
     </section>
-    <section id="top"></section>
+    <section id="top">
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 top-col">
+                    <h1> A Simple Bookmark Manager</h1>
+                    <h5> A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.
+                    </h5>
+                    <div class="row btn-row">
+                        <button class="btn btn-lg download-btn download-btn-chrome"> Get it on Chrome</button>
+                        <button class="btn btn-lg download-btn download-btn-firefox"> Get it on Firefox</button>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <img class="top-im" src="images/illustration-hero.svg" alt="">
+                </div>
+            </div>
+        </div>
+
+    </section>
     <section id="features"></section>
     <section id="middle"></section>
     <section id="questions"></section>
