features and middle section added
features section needs a little more work to be finished

--- a/bookmark-landing-page-master/index.html
+++ b/bookmark-landing-page-master/index.html
@@ -70,8 +70,112 @@
         </div>
 
     </section>
-    <section id="features"></section>
-    <section id="middle"></section>
+    <section id="features">
+        <div class="container-fluid features-cont">
+            <h3>Features</h3>
+            <h5> Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.
+            </h5>
+        </div>
+        <div class="container-fluid">
+            <div class="btn-toolbar btn-group" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-4" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-lg active" id="one-click">Simple Bookmarking</button>
+                    <button type="button" class="btn btn-lg" id="search">Speedy Searching</button>
+                    <button type="button" class="btn btn-lg" id="share">Easy Sharing</button>
+
+                </div>
+            </div>
+            <div id="myCarousel" class="carousel slide" data-ride="false">
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item one-click active">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <img src="images/illustration-features-tab-1.svg" alt="">
+                            </div>
+                            <div class="col-lg-6 feature-col">
+                                <h3>Bookmark in one click</h3>
+                                <h5> Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.
+                                </h5>
+                                <button class="btn-lg btn-feat">More Info</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item search">
+                        <div class="row">
+                            <div class="col-lg-6 feature-col">
+                                <img src="images/illustration-features-tab-2.svg" alt="">
+                            </div>
+                            <div class="col-lg-6">
+                                <h3>Intelligent search</h3>
+                                <h5> Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks. </h5>
+                                <button class="btn-lg btn-feat">More Info</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item share">
+                        <div class="row">
+                            <div class="col-lg-6 feature-col">
+                                <img src="images/illustration-features-tab-3.svg" alt="">
+                            </div>
+                            <div class="col-lg-6">
+                                <h3>Share your bookmarks</h3>
+                                <h5> Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button. </h5>
+                                <button class="btn-lg btn-feat">More Info</button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+    </section>
+    <section id="middle">
+        <div class="container-fluid middle-cont">
+            <h3>Download the extension</h3>
+            <h5>
+                We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</h5>
+        </div>
+        <div class="container-fluid ">
+            <div class="row card-row">
+                <div class="col-lg-4">
+                    <div class="card ch-ext-card">
+                        <div class="card-body">
+                            <img src="images/logo-chrome.svg" alt="">
+                            <h4> Add to Chrome</h4>
+                            <h6> Minimum version 62</h6>
+                            <img class="dots" src="images/bg-dots.svg" alt="">
+
+                            <button class="btn btn-lg btn-middle"> Add & Install Extension</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card fi-ext-card">
+                        <div class="card-body">
+                            <img src="images/logo-firefox.svg" alt="">
+                            <h4> Minimum version 55</h4>
+                            <h6> Add & Install Extension</h6>
+                            <img class="dots" src="images/bg-dots.svg" alt="">
+
+                            <button class="btn btn-lg btn-middle"> Add & Install Extension</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card op-ext-card">
+                        <div class="card-body">
+                            <img src="images/logo-opera.svg" alt="">
+                            <h4> Minimum version 46</h4>
+                            <h6> Add & Install Extension</h6>
+                            <img class="dots" src="images/bg-dots.svg" alt="">
+
+                            <button class="btn btn-lg btn-middle"> Add & Install Extension</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="questions"></section>
     <section id="cta"></section>
     <section id="bottom"></section>
