features jquery added

--- a/bookmark-landing-page-master/index.html
+++ b/bookmark-landing-page-master/index.html
@@ -81,20 +81,20 @@
         <div class="container-fluid">
             <div class="btn-toolbar btn-group" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group mr-4" role="group" aria-label="First group">
-                    <button type="button" class="btn btn-lg active" id="one-click">Simple Bookmarking</button>
-                    <button type="button" class="btn btn-lg" id="search">Speedy Searching</button>
-                    <button type="button" class="btn btn-lg" id="share">Easy Sharing</button>
+                    <button type="button" class="btn group-btn btn-lg active" id="one-click">Simple Bookmarking</button>
+                    <button type="button" class="btn group-btn btn-lg" id="search">Speedy Searching</button>
+                    <button type="button" class="btn group-btn btn-lg" id="share">Easy Sharing</button>
 
                 </div>
             </div>
             <div id="myCarousel" class="carousel slide" data-ride="false">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item one-click active">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <img src="images/illustration-features-tab-1.svg" alt="">
-                            </div>
+                        <div class="row row-feat">
                             <div class="col-lg-6 feature-col">
+                                <img class="feat-im" src="images/illustration-features-tab-1.svg" alt="">
+                            </div>
+                            <div class="col-lg-6 feat-text-col">
                                 <h3>Bookmark in one click</h3>
                                 <h5> Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.
                                 </h5>
@@ -103,11 +103,11 @@
                         </div>
                     </div>
                     <div class="carousel-item search">
-                        <div class="row">
+                        <div class="row row-feat">
                             <div class="col-lg-6 feature-col">
-                                <img src="images/illustration-features-tab-2.svg" alt="">
+                                <img class="feat-im" src="images/illustration-features-tab-2.svg" alt="">
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 feat-text-col">
                                 <h3>Intelligent search</h3>
                                 <h5> Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks. </h5>
                                 <button class="btn-lg btn-feat">More Info</button>
@@ -116,11 +116,11 @@
                     </div>
 
                     <div class="carousel-item share">
-                        <div class="row">
+                        <div class="row row-feat">
                             <div class="col-lg-6 feature-col">
-                                <img src="images/illustration-features-tab-3.svg" alt="">
+                                <img class="feat-im" src="images/illustration-features-tab-3.svg" alt="">
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 feat-text-col">
                                 <h3>Share your bookmarks</h3>
                                 <h5> Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button. </h5>
                                 <button class="btn-lg btn-feat">More Info</button>
