--- a/bookmark-landing-page-master/index.html
+++ b/bookmark-landing-page-master/index.html
@@ -271,12 +271,12 @@
     </section>
     <section id="bottom">
         <div class="row">
-            <div class="col-md-3"><img src="images/logo-bookmark.svg" alt=""></div>
+            <div class="col-md-3"><img class="footer-logo" src="images/bookmark-white .svg" alt=""></div>
             <div class="col-md-2"><a class="text-color-bot" href="#">Features</a></div>
             <div class="col-md-2"><a class="text-color-bot" href="#">Pricing</aclass="text-color-bot"></div>
             <div class="col-md-2"><a class="text-color-bot" href="#">Contact</a></div>
             <div class="col-md-3">
-                <div class="row">
+                <div class="row icon-row">
                     <i class="fab bottom-icon fa-facebook fa-2x fas-footer"></i>
                     <i class="fab bottom-icon fa-twitter fa-2x fas-footer"></i>
                 </div>
